--- a/.github/workflows/filelistbuilder.yml
+++ b/.github/workflows/filelistbuilder.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Checksum rof
-        run: cd rof && ./filelistbuilder
+        run: cd rof && chmod +x filelistbuilder && ./filelistbuilder
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
